vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_variant.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nname : process is\nbegin\nend process name;\",)"
---
ProcessStatement
  StmtLabel
    Identifier 'name'
    Colon
  ProcessPreamble
    Keyword(Process)
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  ProcessEpilogue
    Keyword(End)
    Keyword(Process)
    Identifier 'name'
    SemiColon
