vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_with_conditional_waveform_assignment.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nmain: process is\nbegin\n    data_processing_state <= processing when processing_data else idle;\nend process main;\",)"
---
ProcessStatement
  StmtLabel
    Identifier 'main'
    Colon
  ProcessPreamble
    Keyword(Process)
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  SequenceOfStatements
    ConditionalWaveformAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'data_processing_state'
      LTE
      ConditionalWaveforms
        WhenWaveform
          WaveformElements
            WaveformElement
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'processing'
          Keyword(When)
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'processing_data'
        ElseWaveform
          Keyword(Else)
          WaveformElements
            WaveformElement
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'idle'
      SemiColon
  ProcessEpilogue
    Keyword(End)
    Keyword(Process)
    Identifier 'main'
    SemiColon
