vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_with_empty_sensitivity_list.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
process()
begin
end process;

== tree ==
ProcessStatement
  ProcessPreamble
    Keyword(Process)
    ParenthesizedProcessSensitivityList
      LeftPar
      RightPar
  DeclarationStatementSeparator
    Keyword(Begin)
  ProcessEpilogue
    Keyword(End)
    Keyword(Process)
    SemiColon

== diagnostics ==
1:9 expected SensitivityList
